--- a/index.html
+++ b/index.html
@@ -302,9 +302,10 @@
     <section class="work">
       <div class="container">
         <div class="row">
+
           <!-- single start -->
-          <div class="col-lg-4 col-md-4 col-sm-6">
-            <div class="single text-center">
+          <div class=" containerr col-lg-4 col-md-4 col-sm-6">
+            <div class="boxx single text-center">
               <img src="img/work1.png" alt="Modus" class="w_img1">
               <img src="img/line.png" alt="Modus" class="w_img2">
               <h1 class="w_h1">IDEA</h1>
@@ -315,9 +316,10 @@
             </div>
           </div>
           <!-- single end -->
+
           <!-- single start -->
-          <div class="col-lg-4 col-md-4 col-sm-6">
-            <div class="single text-center mt_t_0">
+          <div class="containerr col-lg-4 col-md-4 col-sm-6">
+            <div class="boxx single text-center mt_t_0">
               <img src="img/work2.png" alt="Modus" class="w_img1">
               <img src="img/line.png" alt="Modus" class="w_img2">
               <h1 class="w_h1">WORK</h1>
@@ -329,8 +331,8 @@
           </div>
           <!-- single end -->
           <!-- single start -->
-          <div class="col-lg-4 col-md-4">
-            <div class="single text-center m_t_0">
+          <div class="containerr col-lg-4 col-md-4">
+            <div class="boxx single text-center m_t_0">
               <img src="img/work3.png" alt="Modus" class="w_img1">
               <img src="img/line.png" alt="Modus" class="w_img2">
               <h1 class="w_h1">DELIVER</h1>
