--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- nav bar start -->
 <nav class="navbar navbar-expand-lg navbar-light p-0">
   <div class="container-fluid p-0">
-    <a class="navbar-brand p-0" href="#">
+    <a class="navbar-brand p-0" href="index.html">
       <div class="logo">
         <img src="img/logo.png" alt="Modus">
     </div>
