--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
     <link rel="stylesheet" type="text/css" href="css/media.css">
 
     <title>Modus</title>
-    <!-- font awpsome -->
+    <!-- font awesome -->
     <script src="https://kit.fontawesome.com/6733540ad6.js" crossorigin="anonymous"></script>
   </head>
-
   <body>
 
     <!-- header start -->
@@ -368,7 +367,7 @@
         <!-- 2nd row -->
         <div class="row">
           <div class="col-lg-12 col-md-12 ">
-            <div class="clients_item">
+            <div class=" clients_item">
               <div class="col-lg-2 col-2 our_clients_2nd_row">
                 <a href="#"><img src="img/clients1.png" alt="Modus"></a>
               </div>
